	PR gas/6656 	* dwarf2dbg.c (dwarf2_directive_file): Disable gas generated 	debug info if we see compiler generated debug info. 	(dwarf2_directive_loc): Likewise.  Remove redundant debug_type test.